<resources>
    <string name="app_name">Coletor de faces</string>
    <string name="name_field">Name</string>
    <string name="email_field">E-mail</string>
    <string name="password_field">Senha</string>
    <string name="sign_up">Criar Conta</string>
    <string name="create_account">Criar conta</string>
    <string name="sign_in">Entrar</string>
    <string name="student_photo">Student Photo</string>
    <string name="logo">logo</string>
    <string name="string_logo">logo</string>
    <string name="switch_camera">Trocar câmera</string>
    <string name="take_picture">Tirar foto</string>
    <string name="normal_photo">take_normal_photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_profile">Salvar</string>
    <string name="exit_app">sair</string>
    <string name="new_password">Nova senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="text_name">Nome</string>
    <string name="start_hour_text">Início:</string>
    <string name="end_hour_text">Fim:</string>
    <string name="id_text">Id:</string>
    <string name="name_text">Nome:</string>
    <string name="face_not_recognize">Face não reconhecida</string>
    <string name="create_free_account">Criar conta</string>
    <string name="todo">TODO</string>
    <string name="enrollment_field">Matrícula</string>
    <string name="already_login">Já tenho login</string>

</resources>